--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
                 <artifactid>maven-compiler-plugin</artifactid>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>17
+                    <source>17</source>
                     <target>17</target>
                 </configuration>
             </plugin>
@@ -43,10 +43,16 @@
         </dependency>
 
 
+        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.13.0</version>
+        </dependency>
 
 
     </dependencies>
-    <exclusions>
+
         <exclusion>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
@@ -55,5 +61,5 @@
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
         </exclusion>
-    </exclusions>
+
 </project>
